doc: Changelog: Updated for nandpsu
Signed-off-by: Naga Sureshkumar Relli <nagasure@xilinx.com>

Acked-By: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -23,6 +23,9 @@ Avoid redundant axi ethernet config lookup and intialize.
 xilisf_v5_11
 Added support for ISSI 256Mb series flash parts.
 
+nandpsu_v1_4
+Added ICCARM compiler support in driver.
+
 Changes for 2018.1
 ===============================
 v_hdmi_common_v1_0
