ChangeLog: Update ChangeLog for Hot Plug support in lwIP202
- Update ChangeLog for Hot plug autodetect support for EmacPS
  and AXI Ethernet in lwIP202.

Signed-off-by: Maulik Jodhani <maulik.jodhani@xilinx.com>

Acked-for-series: Radhey Shyam Pandey <radheys@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -19,6 +19,7 @@ maximum number of channels.
 
 lwip202_v1_1:
 Avoid redundant axi ethernet config lookup and intialize.
+Add Hot plug autodetect support for EmacPS and AXI Ethernet.
 
 xilisf_v5_11
 Added support for ISSI 256Mb series flash parts.
