--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -15,6 +15,11 @@ i2stx_v1_1:
 Changed log APIs so that they take the i2stx instance as argument.
 Changed the channel status clear API to cover all the registers.
 
+iicps_v3_7:
+Changed Eeprom scanning code with the dynamic Eeprom scanning code
+from other examples. (CR#997545)
+Changed the data packing code as per the other examples.
+
 rfdc_v3_3:
 Add XRFdc_MTS_Sysref_Config API to enable/disable sysref.
 Update max VCO value to 13108MHz to support max DAC sample rate of 6.554MHz.
