Changelog: Update changelog for sysmonpsu
Signed-off-by: Manish Narani <manish.narani@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -69,6 +69,7 @@ Resolve compilation warnings for sdps driver
 
 sysmonpsu_v2_4
 Remove looping check for PL accessible bit
+Remove usleeps from AMS CTRL example
 
 Resetps_v1_1
 Fixed compilation warnings in resetps driver
