ChangeLog: Updated the ChangeLog for resetps.
Signed-off-by: Nava kishore Manne <navam@xilinx.com>

Acked-for-series: Kedareswara rao Appana <appanad@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -62,6 +62,9 @@ Resolve compilation warnings for sdps driver
 sysmonpsu_v2_4
 Remove looping check for PL accessible bit
 
+Resetps_v1_1
+Fixed compilation warnings in resetps driver
+
 xilffs_v3_9
 Resolve build warnings for xilffs library
 
