Changelog: Updated bsp and freertos
Signed-off-by: Srija Malyala <srijam@xilinx.com>

Acked-for-series: Mubin Sayyed <mubin.usman.sayyed@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,5 +1,8 @@
 Changes for 2018.2
 ===============================
+standalone_v6_7:
+Fixed compilation warnings in xil_sleeptimer.c
+
 v_hdmirxss_v5_1:
 Fixed a bug in XV_HdmiRxSs_BrdgOverflowCallback
 Cleaned up the flow during HPD during the transition from HDMI 2.0 to HDMI 1.4
