bsp: changelog: Update changelog.txt for the standalone BSP.
Signed-off-by: Anirudha Sarangi <anirudh@xilinx.com>

--- a/lib/bsp/standalone/src/changelog.txt
+++ b/lib/bsp/standalone/src/changelog.txt
@@ -541,5 +541,8 @@
 *		       the -mfpu-abi option in extra compiler flags.. This change has
 *		       been done to avoid saving/restoring of HW floating point registers,
 *		       when BSP is not compiled with HW floating point configuration.
+* 6.7 asa    04/26/18  Added API Xil_GetExceptionRegisterHandler for obtaining information
+*                      on an already registered exception vector.
+* 6.7 asa    05/18/18  Fixed bugss in the API Xil_GetExceptionRegisterHandler.
 *
  *****************************************************************************************/
