--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -80,7 +80,8 @@ Add XRFdc_GetLinkCoupling() API to get the Link Coupling mode.
 Add clock configuration files for ZCU111 in examples.
 Updated the lmk configuration to support different revisions of zcu111
 Added support for configuring lmx 5.12GHz
-
+Update the minimum value supported for Ref clock to 102.4062MHz.
+Removed CalibrationMode check for DAC in XRFdc_GetMixerSettings() and XRFdc_GetNyquistZone() APIs.
 
 sdiaud_v1_1:
 Changed selftest to cover all the GUI parameters like UHD SDI standard and maximum number of channels.
