--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -24,6 +24,9 @@ usbpsu_v1_4
 Fixed the errors which occur when tested with IAR compiler
 Added the new examples into mss file
 
+xilfpga_v4_2
+Refactor the xilfpga library to support different PL programming Interfaces.
+
 Changes for 2018.2
 ===============================
 freertos10_xilinx_v1_1:
