--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -3,6 +3,9 @@ Changes for 2018.3
 clockps_v1_0:
 First release of clocksPS drivers.
 
+cpu_v2_8:
+Added Os and LTO settings in extra compiler flags for PMU BSP
+
 qspipsu_v1_8:
 Added support for IS25LP064 and IS25WP064.
 
