changelog: Updated changelog.txt for xil_cache.c
Signed-off-by: Arunima Mishra <anunima.mishra@xilinx.com>

Acked-for-series: Mubin Sayyed <mubin.usman.sayyed@xilinx.com>

--- a/lib/bsp/standalone/src/changelog.txt
+++ b/lib/bsp/standalone/src/changelog.txt
@@ -544,5 +544,7 @@
 *                      the -mfpu-abi option in extra compiler flags.. This change has
 *                      been done to avoid saving/restoring of HW floating point registers,
 *                      when BSP is not compiled with HW floating point configuration.
+* 6.8 aru    06/15/18  Removed unused variable in xil_cache.c for A53-32. It
+*                      fixes CR1005118.
 *
  *****************************************************************************************/
