--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -37,6 +37,9 @@ Added the new examples into mss file
 xilfpga_v4_2
 Refactor the xilfpga library to support different PL programming Interfaces.
 
+standalone_v6_8:
+Fixed compilation warnings in xil_cache.c.(CR#1005118)
+
 Changes for 2018.2
 ===============================
 freertos10_xilinx_v1_1:
