ChangeLog: Updated ChangeLog for xil_mpu.c
Signed-off-by: Arunima Mishra <anunima.mishra@xilinx.com>

Acked-for-series: Anirudha Sarangi <anirudh@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -43,6 +43,7 @@ Refactor the xilfpga library to support different PL programming Interfaces.
 
 standalone_v6_8:
 Fixed compilation warnings in xil_cache.c.(CR#1005118)
+Modified the return value of Xil_MemMap() as pointer instead of address of pointer in xil_mpu.c(CR#1005119)
 
 Changes for 2018.2
 ===============================
