--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -19,6 +19,13 @@ interrupt id's, when output of utility reduced logic
 is connected to pl-ps interrupt as well as ILA probe.
 Fix for CR#999732.
 
+tmrctr_v4_6:
+Updated driver examples to call TmrCtrDisableIntr
+API with the correct arguments. It fixes
+CR#1006251.
+Fixed several checkpatch errors/warnings in
+interrupt examples.
+
 xilisf_v5_12:
 Added support for IS25LP064A and IS25WP064A.
 Removed the check for address to be non zero and
