Changelog: Update for tmrctr driver
Signed-off-by: Mubin Usman Sayyed <mubin.usman.sayyed@xilinx.com>

Acked-for-series: Appana Durga Kedareswara rao <appana.durga.rao@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -275,6 +275,13 @@ ttcps_v3_7:
 Fixed bug in XTtcPs_CalcIntervalFromFreq API to use 
 correct maximum interval count for ZynqMP.
 
+tmrctr_v4_6:
+Updated driver examples to call TmrCtrDisableIntr
+API with the correct arguments. It fixes
+CR#1006251.
+Fixed several checkpatch errors/warnings in
+interrupt examples.
+
 xilisf_v5_12:
 Added support for IS25LP064A and IS25WP064A.
 Removed the check for address to be non zero and
