--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -34,6 +34,16 @@ clockps_v1_0:
 First release of clocksPS drivers.
 Fix Doxygen and coverity reported issues.
 
+lwip202_v1_2:
+Add mcdma support and handle IEEE_1588 for AXI Phy in ethernet header.
+Add AXI 2.5G Ethernet support.
+
+mcdma_v1_2:
+Add API XMcdma_LookupConfigBaseAddr() to lookup config by base address.
+Add XMcdma_BdSetSwId() and XMcdma_BdGetSwId() macro to access SW ID field in BD.
+Export XMcdma_BdChainFree() and XMcDma_BdSetAppWord() APIS to use from LwIP contrib source.
+
+
 cpu_v2_8:
 Added Os and LTO settings in extra compiler flags for PMU BSP
 
@@ -96,6 +106,12 @@ Added support for MT25QL01G flash from Micron (CR#1004264)
 Updated the library notes for Micron flash parts. (cr#973229)
 Added support for the low density ISSI flash parts. (PR#9237)
 Fixed the compilation warnings for ARMCC compiler. (CR#1008307)
+
+xxvethernet_v1_1:
+Update tcl to find mcdma from design and add cannonical macro in xparameters.h and update topology in xxxvethernet_g.c accordingly.
+Add API XXxvEthernet_LookupConfigBaseAddr(UINTPTR Baseaddr) to lookup config by base address.
+Add Macro XXxvEthernet_IsMcDma(InstancePtr) to check Mcdma is connected or not.
+
 
 Resetps_v1_2
 Fixed compilation warnings in resetps driver
