--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -13,6 +13,12 @@ for irq_in pin.It fixes CR#1005371
 qspipsu_v1_8:
 Added support for IS25LP064 and IS25WP064.
 
+rfdc_v5_0:
+Update DAC min sampling rate to 500MHz and also update VCO Range, PLL_DIVIDER and PLL_FPDIV ranges.
+Add XRFdc_GetFabClkOutDiv() API to read fabric clk div.
+Add Inline APIs XRFdc_CheckBlockEnabled(), XRFdc_CheckTileEnabled().
+Add support to dump HSCOM regs in XRFdc_DumpRegs() API.
+
 scugic_v3_10:
 Updated get_psu_interrupt_id to generate correct
 interrupt id's, when output of utility reduced logic
