doc: Changelog: pmufw update for GEM BD fix
Updated changelog for pmufw GEM BD fix patch.

Signed-off-by: Harini Katakam <harini.katakam@xilinx.com>
Acked-by: Siva Addepalli <saddepal@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -69,6 +69,9 @@ Include missing initializers for 'XAxiCdma_Config' fields.
 Fix cppcheck warning.
 Fix gcc warning in peripheral test application.
 
+zynqmp_pmufw:
+Fix GEM RXQ high pointer in case of WOL
+
 Changes for 2018.2
 ===============================
 freertos10_xilinx_v1_1:
