changelog: Update for rfdc driver
This patch updates changelog for rfdc driver.

Signed-off-by: Sai Krishna Potthuri <lakshmi.sai.krishna.potthuri@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -24,6 +24,7 @@ Update DAC min sampling rate to 500MHz and also update VCO Range, PLL_DIVIDER an
 Add XRFdc_GetFabClkOutDiv() API to read fabric clk div.
 Add Inline APIs XRFdc_CheckBlockEnabled(), XRFdc_CheckTileEnabled().
 Add support to dump HSCOM regs in XRFdc_DumpRegs() API.
+Fixed Multiband crossbar settings in C2C mode.
 
 scugic_v3_10:
 Updated get_psu_interrupt_id to generate correct
