--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -63,6 +63,8 @@ Refactor the xilfpga library to support different PL programming Interfaces.
 standalone_v6_8:
 Fixed compilation warnings in xil_cache.c.(CR#1005118)
 Modified the return value of Xil_MemMap() as pointer instead of address of pointer in xil_mpu.c(CR#1005119)
+Updated Cortexa9 translation table to mark DDR memory as inner cacheable,
+if BSP is built with the USE_AMP flag. It fixes CR#1006745.
 
 axivdma_v6_6:
 Added support for vertical flip programming.
