ChangeLog: Updated ChangeLog for Xilisf related changes.
Signed-off-by: Tejas Prajapati Rameshchandra <tejaspra@xilinx.com>

Acked-for-series: Naga Sureshkumar Relli <nagasure@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -51,6 +51,7 @@ Added check for Spansion flash before proceeding to quad mode read (CR#1002769)
 Added support for Macronix 1G flash parts. (CR#978447)
 Removed checkpatch and GCC warnings.
 Added support for MT25QL01G flash from Micron (CR#1004264)
+Updated the library notes for Micron flash parts. (cr#973229)
 
 Resetps_v1_2
 Fixed compilation warnings in resetps driver
