--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -67,6 +67,7 @@ Added the new examples into mss file
 
 xilfpga_v4_2
 Refactor the xilfpga library to support different PL programming Interfaces.
+Added support for readback of PL configuration data.
 
 standalone_v6_8:
 Fixed compilation warnings in xil_cache.c.(CR#1005118)
@@ -85,9 +86,19 @@ Fix gcc warning in peripheral test application.
 
 zynqmp_pmufw:
 Fix GEM RXQ high pointer in case of WOL
+Fix read of pmu global gen storage reg5
 
 axipmon_v6_7:
 Fix Doxygen reported warnings.
+
+zynqmp_fsbl:
+Fix write on pmu global gen storage reg5
+
+csudma_v1_3:
+Fix Doxygen reported warnings
+
+zdma_v1_6:
+Fix Doxygen, cppcheck and coverity reported warnings.
 
 Changes for 2018.2
 ===============================
