ChangeLog: Updated for axiethernet driver
Signed-off-by: Radhey Shyam Pandey <radhey.shyam.pandey@xilinx.com>
Acked-for-series: Appana Durga Kedareswara rao <appana.durga.rao@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -118,6 +118,9 @@ Fix Doxygen reported warnings
 zdma_v1_6:
 Fix Doxygen, cppcheck and coverity reported warnings.
 
+axiethernet_v5_8:
+Fix cppcheck and gcc warnings.
+
 Changes for 2018.2
 ===============================
 freertos10_xilinx_v1_1:
