--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -71,6 +71,7 @@ Added the new examples into mss file
 xilfpga_v4_2
 Refactor the xilfpga library to support different PL programming Interfaces.
 Added support for readback of PL configuration data.
+Added Support to load the vivado generated .bit and .bin files.
 
 standalone_v6_8:
 Fixed compilation warnings in xil_cache.c.(CR#1005118)
