Changelog: Update changelog for clockps
Update the changelog for clockps.

Signed-off-by: Shubhrajyoti Datta <shubhrajyoti.datta@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -16,6 +16,7 @@ Fix Cppcheck and Doxygen warnings
 
 clockps_v1_0:
 First release of clocksPS drivers.
+Fix Doxygen and coverity reported issues.
 
 cpu_v2_8:
 Added Os and LTO settings in extra compiler flags for PMU BSP
