--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -31,6 +31,7 @@ Added an example for accessing 64bit dma within 32 bit application.(CR#1004701)
 Removed checkpatch warnings for xqspipsu.c and xqspipsu.h
 Removed the mentions of Spansion flash from BlockErase API. (CR#1006247)
 Fixed cppcheck, doxygen and gcc warnings. (CR#1006336)
+Setup64BRxDma() should be called if the RxAddress is greater than 32 bit address space. (CR#1006862)
 
 rfdc_v5_0:
 Update DAC min sampling rate to 500MHz and also update VCO Range, PLL_DIVIDER and PLL_FPDIV ranges.
