--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -13,6 +13,7 @@ Fix cppcheck, GCC and doxygen warnings.
 sdps_v3_6
 Fixed Cppcheck, Doxygen and gcc warnings (CR#1006375)
 Add initializer macro for HasEMIO
+Add support for using 64Bit DMA in 32Bit Processor
 
 xilffs_v3_10:
 Fix Cppcheck and Doxygen warnings
