--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -90,6 +90,7 @@ xilfpga_v4_2
 Refactor the xilfpga library to support different PL programming Interfaces.
 Added support for readback of PL configuration data.
 Added Support to load the vivado generated .bit and .bin files.
+Added example for loading partial reconfiguration bitstreams.
 
 standalone_v6_8:
 Fixed compilation warnings in xil_cache.c.(CR#1005118)
