--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -30,6 +30,9 @@ Fix Doxygen and coverity reported issues.
 cpu_v2_8:
 Added Os and LTO settings in extra compiler flags for PMU BSP
 
+iicps_v3_8:
+Fix for Cppcheck and Doxygen warnings.
+
 intc_v3_8:
 Updated check_cascade proc, to add check
 for irq_in pin.It fixes CR#1005371
