--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -47,6 +47,8 @@ Add MixerType member to MixerSettings structure and Update Mixer Settings APIs t
 Add inline APIs XRFdc_CheckDigitalPathEnabled(), XRFdc_IsADCDigitalPathEnabled() and XRFdc_IsDACDigitalPathEnabled().
 Add XRFdc_GetMultibandConfig() API to read Multiband configuration.
 Update the APIs to check the corresponding section(Digital or Analog)enable.
+Fixed MISRAC, Doxygen and coverity warnings.
+Check for Block0 enable for tiles participating in MTS.
 
 scugic_v3_10:
 Updated get_psu_interrupt_id to generate correct
